--- a/itinerary.html
+++ b/itinerary.html
@@ -254,6 +254,27 @@
             top: 20%; opacity: 1;
         }
 
+        /* Button to view details */
+.details-btn {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 25px;
+    border: 1px solid rgba(255,255,255,0.5);
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    letter-spacing: 2px;
+    transition: all 0.3s ease;
+}
+
+.details-btn:hover {
+    background: #d4af37; /* Gold fill on hover */
+    border-color: #d4af37;
+    color: black;
+    box-shadow: 0 0 15px rgba(212, 175, 55, 0.4);
+}
+
     </style>
 </head>
 <body>
@@ -282,6 +303,7 @@
                 <span class="date-tag">Nov 30 - Dec 02</span>
                 <h2>Forestis Dolomites</h2>
                 <p>A sanctuary in the clouds. Spa days, altitude, and pure silence.</p>
+                <a href="forestis.html" class="details-btn">View Activities</a>
             </div>
         </section>
 
@@ -291,6 +313,7 @@
                 <span class="date-tag">Dec 03</span>
                 <h2>Alpine Adventure</h2>
                 <p>A private trip to the slopes. Hot chocolate, snowy peaks, and experiencing nature.</p>
+                <a href="chalet.html" class="details-btn">View Activities</a>
             </div>
         </section>
 
@@ -299,6 +322,7 @@
                 <span class="date-tag">Dec 04 - Dec 07</span>
                 <h2>Milano</h2>
                 <p>High fashion, Duomo di Milano, and luxury shopping on Via Montenapoleone.</p>
+                <a href="milan.html" class="details-btn">View Activities</a>
             </div>
         </section>
 
